feat: implement new `patchExistingEntity` signature in Product service
include unit tests
introduce 1 temporary sonar issue